<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#052461"
    tools:context=".Views.movieDetail_activity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar_fragment_movie_detail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/colorPrimary"
                android:minHeight="?attr/actionBarSize"
                android:theme="?attr/actionBarTheme"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:title="Movie Detail" />

            <ImageView
                android:id="@+id/bc_Path"
                android:layout_width="0dp"
                android:layout_height="200dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/toolbar_fragment_movie_detail"
                app:srcCompat="@drawable/ic_launcher_foreground" />

            <ImageView
                android:id="@+id/posterPath_movie_detail"
                android:layout_width="130dp"
                android:layout_height="150dp"
                android:layout_marginTop="160dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/toolbar_fragment_movie_detail"
                app:srcCompat="@drawable/ic_launcher_foreground" />

            <TextView
                android:id="@+id/title_movie_detail"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="20dp"
                android:text="@string/nonValue"
                android:textAlignment="center"
                android:textColor="#FFEB3B"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/posterPath_movie_detail" />

            <TextView
                android:id="@+id/originalTitle_movieDetail"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/nonValue"
                android:textAlignment="center"
                android:textColor="#EADDDD"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="@+id/title_movie_detail"
                app:layout_constraintStart_toStartOf="@+id/title_movie_detail"
                app:layout_constraintTop_toBottomOf="@+id/title_movie_detail" />

            <TextView
                android:id="@+id/txtview2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="30dp"
                android:text="@string/releaseDate"
                android:textAlignment="center"
                android:textColor="#FFEB3B"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/txtview3" />

            <TextView
                android:id="@+id/originalLanguage_movieDetail"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/nonValue"
                android:textAlignment="center"
                android:textColor="#EADDDD"
                android:textSize="12sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@+id/textView6"
                app:layout_constraintStart_toStartOf="@+id/textView6"
                app:layout_constraintTop_toTopOf="@+id/popularity_detail_movie" />

            <TextView
                android:id="@+id/txtview3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="30dp"
                android:text="@string/popularity"
                android:textAlignment="center"
                android:textColor="#FFEB3B"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/originalTitle_movieDetail" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:text="@string/originalLanguage"
                android:textAlignment="center"
                android:textColor="#FFEB3B"
                android:textStyle="bold"
                app:layout_constraintEnd_toStartOf="@+id/txtview2"
                app:layout_constraintStart_toEndOf="@+id/txtview3"
                app:layout_constraintTop_toTopOf="@+id/txtview3" />

            <TextView
                android:id="@+id/release_detail_movie"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/nonValue"
                android:textAlignment="center"
                android:textColor="#EADDDD"
                android:textSize="12sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@+id/txtview2"
                app:layout_constraintStart_toStartOf="@+id/txtview2"
                app:layout_constraintTop_toTopOf="@+id/popularity_detail_movie" />

            <TextView
                android:id="@+id/popularity_detail_movie"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/nonValue"
                android:textAlignment="center"
                android:textColor="#EADDDD"
                android:textSize="12sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@+id/txtview3"
                app:layout_constraintStart_toStartOf="@+id/txtview3"
                app:layout_constraintTop_toBottomOf="@+id/txtview3" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/cardView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:background="@drawable/card_shape"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/originalLanguage_movieDetail">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/textView2"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="30dp"
                        android:layout_marginEnd="10dp"
                        android:text="@string/overview"
                        android:textColor="#0C0C0C"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/overviewText_movieDetails"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:layout_marginTop="10dp"
                        android:text="@string/nonValue"
                        android:textColor="#CAB818"
                        android:textSize="14sp"
                        app:layout_constraintEnd_toEndOf="@+id/textView2"
                        app:layout_constraintStart_toStartOf="@+id/textView2"
                        app:layout_constraintTop_toBottomOf="@+id/textView2" />

                    <TextView
                        android:id="@+id/voteAverage_movie_detail"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:layout_marginTop="10dp"
                        android:text="@string/nonValue"
                        android:textAlignment="textStart"
                        android:textColor="#CAB818"
                        android:textSize="14sp"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toEndOf="@+id/voteCount_movie_detail"
                        app:layout_constraintStart_toStartOf="@+id/textView7"
                        app:layout_constraintTop_toBottomOf="@+id/textView7" />

                    <TextView
                        android:id="@+id/voteCount_movie_detail"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:text="@string/nonValue"
                        android:textColor="#A39C9C"
                        android:textSize="12sp"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toEndOf="@+id/overviewText_movieDetails"
                        app:layout_constraintStart_toEndOf="@+id/textView7"
                        app:layout_constraintTop_toTopOf="@+id/textView7" />

                    <TextView
                        android:id="@+id/textView7"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="30dp"
                        android:text="@string/voteCount"
                        android:textAlignment="textStart"
                        android:textColor="#0C0C0C"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        app:layout_constraintStart_toStartOf="@+id/textView2"
                        app:layout_constraintTop_toBottomOf="@+id/overviewText_movieDetails" />

                    <TextView
                        android:id="@+id/textView10"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="30dp"
                        android:text="@string/genre"
                        android:textColor="#0C0C0C"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toEndOf="@+id/voteAverage_movie_detail"
                        app:layout_constraintStart_toStartOf="@+id/textView7"
                        app:layout_constraintTop_toBottomOf="@+id/voteAverage_movie_detail" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/rv_genre_movieDetail"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        app:layout_constraintEnd_toEndOf="@id/textView10"
                        app:layout_constraintStart_toStartOf="@id/textView10"
                        app:layout_constraintTop_toBottomOf="@+id/textView10" />

                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>